# Nuclear_Lego

./: .gitignore  README.md  UNITS.txt  compile_cmake_macos.md  enums.h  voxelTest
Base_Hardware/: base.20251113-114321.FCBak  base.20251113-134245.FCBak  base.20251113-134955.FCBak  base.20251121-110243.FCBak  base.20251122-172427.FCBak  base.20251125-120931.FCBak  (+2 more)
Particle_Transport/: CMakeLists.txt  TODO.txt  UNITS.txt  config.h
Particle_Transport/Data/: data.cpp
Particle_Transport/Enums/: enums.h
Particle_Transport/Helpers/: helpers.cpp
Particle_Transport/IsotopeSample/: isotopeSample.cpp  isotopeSample.h
Particle_Transport/Material/: material.cpp  material.h
Particle_Transport/Particle/: particle.cpp  particle.h  testParticle  testParticle.cpp
Particle_Transport/ParticleGroup/: particleGroup.cpp  particleGroup.h  testParticle.cpp
Particle_Transport/Vector3/: vector3.cpp  vector3.h
Particle_Transport/Voxel/: voxel.cpp  voxel.h  voxelTest  voxelTest.cpp
Particle_Transport/World/: compile_g++.txt  fix_bug.txt  world.cpp  world.h  worldTest  worldTest.cpp  worldTestBasic.cpp  worldTestDistance  worldTestDistance.cpp
Particle_Transport/XSTable/: a.out  xstable.cpp  xstable.h  xstableTest  xstableTest.cpp
Particle_Transport/include/: enums.h  isotopeSample.h  material.h  particleGroup.h  vector3.h  voxel.h  world.h  xstable.h
Particle_Transport/src/: data.cpp  helpers.cpp  isotopeSample.cpp  particleGroup.cpp  pi5_main.cpp  voxel.cpp  world.cpp  xstable.cpp
Particle_Transport/test_files/: voxelTest.cpp  worldTestDistance.cpp  xstableTest.cpp
(+68 files in other folders)
